fix: Change methode to get last sensor on list